--- a/style/index.css
+++ b/style/index.css
@@ -61,13 +61,13 @@ html, body {
 }
 
 h1, h2, h3, h4, h5 {
-    /*font-size: 18px;*/
+    font-size: 2rem;
     margin-bottom: 15px;
-    font-family: 'Rubik', sans-serif;
 }
 
 p {
     line-height: 1.4;
+    font-size: 1.4rem;
 }
 
 .container {
