--- a/style/index.css
+++ b/style/index.css
@@ -75,6 +75,35 @@ p {
     padding: 0 10rem;
 }
 
+/* header section*/
+
+header {
+    background-color: #fff;
+    margin: 5rem 0;
+}
+
+nav {
+    display: flex;
+    box-sizing: border-box;
+}
+
+ul {
+    display: flex;
+    align-items: flex-end;
+}
+
+ul li {
+    margin: 0 20%;
+}
+
+ul a {
+    text-decoration: none;
+    color: black;
+    font-size: 1.5rem;
+}
+
+/* content section */
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -118,6 +147,30 @@ p {
     justify-content: space-evenly;
 }
 
+.middle-content .boxes .box {
+    width: 12.5%;
+    height: 100px;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bottom-content {
+    display: flex;
+    margin: 0 2% 20px;
+    justify-content: space-around;
+}
+
+.bottom-content .text-container {
+    padding-right: 4%;
+}
+
+.bottom-content .text-container:last-child {
+    padding-right: 0;
+}
+
 .box:nth-child(1) {
     background: teal;
 }
@@ -149,74 +202,6 @@ p {
     background: dodgerblue;
 }
 
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* TEST */
-}
-
-.bottom-content {
-    display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
-}
-
-.bottom-content .text-container {
-    padding-right: 4%;
-}
-
-.bottom-content .text-container:last-child {
-    padding-right: 0;
-}
-
-header {
-    background-color: #fff;
-    margin: 5rem 0;
-}
-
-nav {
-    display: flex;
-    box-sizing: border-box;
-}
-
-ul {
-    display: flex;
-    align-items: flex-end;
-}
-
-ul li {
-    margin: 0 20%;
-}
-
-ul a {
-    text-decoration: none;
-    color: black;
-    font-size: 1.5rem;
-}
-footer {
-    width: 100%;
-    background: black;
-}
-
-footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
-    font-size: 14px;
-}
-
-footer nav a {
-    color: white;
-    text-decoration: none;
-}
-
 form {
     width: 70%;
     margin: 1rem;
@@ -243,6 +228,27 @@ label {
     padding: 0.5rem;
 }
 
+/* footer section */
+
+footer {
+    width: 100%;
+    background: black;
+}
+
+footer nav {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
+}
+
+footer nav a {
+    color: white;
+    text-decoration: none;
+}
+
 /* Smaller viewports */
 
 /* mobile */
@@ -252,6 +258,7 @@ label {
         margin: 0px auto;
     }
 
+    /* mobile header section */
     header {
         width: 100%;
         background-color: #fff;
@@ -280,6 +287,7 @@ label {
         margin: 0.5rem 0;
     }
 
+    /* mobile content section */
     .top-content {
         display: flex;
         flex-direction: column;
@@ -351,6 +359,7 @@ label {
         font-size: 1.5rem;
     }
 
+    /* mobile footer section */
     footer nav {
         width: 100%;
         display: flex;
