Got the bottom text containers to wrap 2 and push the third centered on the next line in tablet view.

--- a/style/index.css
+++ b/style/index.css
@@ -26,7 +26,7 @@ time, mark, audio, video {
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+	/* display: block; */
 }
 
 html {
@@ -61,7 +61,7 @@ html, body {
 }
 
 h1, h2, h3, h4, h5 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-bottom: 15px;
 }
 
@@ -99,7 +99,7 @@ ul li {
 ul a {
     text-decoration: none;
     color: black;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
 }
 
 /* content section */
@@ -122,6 +122,10 @@ ul a {
     padding-bottom: 20px;  
 }
 
+.top-content .text-container img {
+    width: 20rem;
+}
+
 .middle-content {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
@@ -139,6 +143,7 @@ ul a {
 
 .middle-content article p {
     font-size: 2rem;
+    padding: 2rem;
 }
 
 .middle-content .boxes {
@@ -148,13 +153,14 @@ ul a {
 }
 
 .middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
+    width: 15rem;
+    height: 15rem;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.6rem;
 }
 
 .bottom-content {
@@ -203,7 +209,7 @@ ul a {
 }
 
 form {
-    width: 70%;
+    width: 90%;
     margin: 1rem;
     padding: 2rem;
     background-color: #ddd;
@@ -390,6 +396,15 @@ footer nav a {
         width: 100%;
         padding: 0 1%;
         padding-bottom: 20px;
+        display: flex;
+    }
+
+    .top-content .text-container h2 {
+        display: none;
+    }
+
+    .top-content .text-container h3 {
+        margin: 0 1rem;
     }
 
     .middle-content .boxes .box {
@@ -400,5 +415,21 @@ footer nav a {
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    .bottom-content {
+        display: flex;
+        margin: 0 2% 20px;
+        flex-wrap: wrap;
+    }
+
+    .bottom-content .text-container {
+        padding-right: 4%;
+        flex: 1 0 47%;
+    }
+
+    .bottom-content .text-container:last-child {
+        padding: 0 15rem;
+        margin: 1.5rem;
     }
 }
