Had to fix something done for tablet view that was interfering with mobile view style rules.

--- a/style/index.css
+++ b/style/index.css
@@ -453,7 +453,7 @@ footer nav a {
     }
 
     .bottom-content .text-container:last-child {
-        padding: 0 15rem;
-        margin: 1.5rem;
+        /* padding: 0 15rem;*/
+        /* margin: 1.5rem; */
     }
 }
